# coola

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  environment.yaml  index.html  pyproject.toml  sitemap.xml  tasks.py  versions.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yaml  cancel-stale-queued-runs.yaml  cancel_stale_queued_runs.yaml  ci.yaml  ci2.yaml  coverage.yaml  cyclic-imports.yaml  docs-dev.yaml  docs.yaml  doctest.yaml  format.yaml  generate-package-versions.yaml  get-versions.yaml  nightly-package.yaml  nightly-tests.yaml  nightly.yaml  pre-commit-autoupdate.yaml  pre-commit.yaml  publish.yaml  pypi.yaml  test-code-dep.yaml  test-deps.yaml  test-nightly-deps.yaml  test-package-dep.yaml  test-package-extras.yaml  test-package.yaml  test.yaml  type-checking.yaml  update-deps.yaml  verify-workflows.yaml
0.10/: 404.html  index.html  sitemap.xml
0.10/architecture/: index.html
0.10/customization/: index.html
0.10/development/: index.html
0.10/examples/: index.html
0.10/faq/: index.html
0.10/get_started/: index.html
0.10/quickstart/: index.html
0.10/refs/: index.html
0.10/refs/equality/: index.html
0.10/refs/formatters/: index.html
0.10/refs/random/: index.html
0.10/refs/reducers/: index.html
0.10/refs/summarizers/: index.html
0.10/refs/testers/: index.html
0.10/refs/utils/: index.html
0.10/types/: index.html
0.10/upgrade/0.3/: index.html
0.10/upgrade/0.4/: index.html
0.11/: 404.html  index.html  sitemap.xml
0.11/architecture/: index.html
0.11/customization/: index.html
0.11/development/: index.html
0.11/examples/: index.html
0.11/faq/: index.html
0.11/get_started/: index.html
0.11/quickstart/: index.html
0.11/refs/: index.html
0.11/refs/equality/: index.html
0.11/refs/formatters/: index.html
0.11/refs/iterator/: index.html
0.11/refs/random/: index.html
0.11/refs/recursive/: index.html
0.11/refs/reducers/: index.html
0.11/refs/summarizers/: index.html
0.11/refs/testers/: index.html
0.11/refs/utils/: index.html
0.11/types/: index.html
0.11/upgrade/0.3/: index.html
0.11/upgrade/0.4/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/customization/: index.html
0.2/get_started/: index.html
0.2/quickstart/: index.html
0.2/refs/: index.html
0.2/refs/comparators/: index.html
0.2/types/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3/customization/: index.html
0.3/get_started/: index.html
0.3/quickstart/: index.html
0.3/refs/: index.html
0.3/types/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/customization/: index.html
0.4/get_started/: index.html
0.4/quickstart/: index.html
0.4/refs/: index.html
0.4/types/: index.html
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/customization/: index.html
0.5/get_started/: index.html
0.5/quickstart/: index.html
0.5/refs/: index.html
0.5/types/: index.html
0.6/: 404.html  index.html  sitemap.xml
0.6/customization/: index.html
0.6/get_started/: index.html
0.6/quickstart/: index.html
0.6/refs/: index.html
0.6/types/: index.html
0.7/: 404.html  index.html  sitemap.xml
0.7/customization/: index.html
0.7/get_started/: index.html
0.7/quickstart/: index.html
0.7/refs/: index.html
0.7/types/: index.html
0.8/: 404.html  index.html  sitemap.xml
0.8/customization/: index.html
0.8/get_started/: index.html
0.8/quickstart/: index.html
0.8/refs/: index.html
0.8/types/: index.html
0.9/: 404.html  index.html  sitemap.xml
0.9/customization/: index.html
0.9/get_started/: index.html
0.9/quickstart/: index.html
0.9/refs/: index.html
0.9/types/: index.html
1.0/: 404.html  index.html  sitemap.xml
1.0/get_started/: index.html
1.1/: 404.html  index.html  sitemap.xml
1.1/get_started/: index.html
1.1/search/: search_index.json
customization/: index.html
dev/: check_markdown.sh  generate_versions.py  install.py
dev/config/: package_versions.json
docs/: mkdocs.yml
docs/docs/: architecture.md  customization.md  development.md  examples.md  faq.md  get_started.md  index.md  migration_v0.11_to_v1.0.md  performance.md  quickstart.md  troubleshooting.md  types.md
docs/docs/refs/: index.md  (+17 more)
get_started/: index.html
main/: 404.html  customization.html  get_started.html  index.html  objects.inv  quickstart.html  sitemap.xml  types.html
main/architecture/: index.html
main/customization/: index.html
main/development/: index.html
main/examples/: index.html
main/faq/: index.html
main/get_started/: index.html
main/quickstart/: index.html
main/refs/: equality.html  formatters.html  index.html  random.html  reducers.html  summarizers.html  testers.html  utils.html
main/search/: search_index.json
main/types/: index.html
main/upgrade/: 0.3.html  0.4.html
quickstart/: index.html
refs/: index.html
refs/comparators/: index.html
refs/formatters/: index.html
refs/reducers/: index.html
refs/summarizers/: index.html
refs/testers/: index.html
refs/utils/: index.html
search/: search_index.json
src/coola/: __init__.py  _numpy.py  _pandas.py  _polars.py  _torch.py  _xarray.py  allclose.py  comparison.py  equal.py  equality.py  format.py  import_utils.py  ndarray.py  polars_.py  pytorch.py  reduction.py  summarization.py  testing.py  torch_.py  types.py  xarray_.py  xr.py
tests/: IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TEST_REVIEW_SUMMARY.md  package_checks.py
tests/unit/: test___init__.py  test_allclose.py  test_comparison.py  test_comparison_with_others.py  test_consistency.py  test_equal.py  test_equality.py  test_format.py  test_import_utils.py  test_init.py  test_ndarray.py  test_numpy.py  test_pandas.py  test_polars.py  test_pytorch.py  test_reduction.py  test_summarization.py  test_testing.py  test_torch.py  test_xarray.py  test_xr.py
types/: index.html
(+692 files in other folders)
