[tool.poetry]
name = "coola"
version = "0.8.5"
description = "Library to check equality between two complex/nested objects"
readme = "README.md"
authors = ["Thibaut Durand <durand.tibo+gh@gmail.com>"]
homepage = "https://github.com/durandtibo/coola"
repository = "https://github.com/durandtibo/coola"
keywords = [
    "complex/nested objects",
    "equality",
    "jax",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "pytorch",
    "xarray",
]
license = "BSD-3-Clause"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

packages = [
    { include = "coola", from = "src" },
]

[tool.poetry.dependencies]
# Core dependencies
python = ">=3.9,<3.14"

# Optional dependencies
jax = [
    { version = ">=0.4.34,<1.0", python = ">=3.13,<3.14", optional = true },
    { version = ">=0.4.17,<1.0", python = ">=3.12,<3.13", optional = true },
    { version = ">=0.4.6,<1.0", python = ">=3.10,<3.12", optional = true },
    { version = ">=0.4.6,<0.4.31", python = ">=3.9,<3.10", optional = true },
]
jaxlib = [
    { version = ">=0.4.34,<1.0", python = ">=3.13,<3.14", optional = true },
    { version = ">=0.4.17,<1.0", python = ">=3.12,<3.13", optional = true },
    { version = ">=0.4.6,<1.0", python = ">=3.10,<3.12", optional = true },
    { version = ">=0.4.6,<0.4.31", python = ">=3.9,<3.10", optional = true },
]
numpy = { version = ">=1.21,<3.0", optional = true }
packaging = { version = ">=21.0,<25.0", optional = true }
pandas = { version = ">=1.3,<3.0", optional = true }
# polars: 0.18.3 is the minimal version because of https://github.com/pola-rs/polars/issues/9358
polars = { version = ">=0.18.3,<2.0", optional = true }
pyarrow = { version = ">=10.0,<19.0", optional = true }
torch = [
    # macOS x86_64 binaries do not exist after pytorch 2.2
    # https://dev-discuss.pytorch.org/t/pytorch-macos-x86-builds-deprecation-starting-january-2024/1690
    { version = ">=1.11,<2.3", optional = true, markers = "sys_platform == 'darwin' and platform_machine != 'arm64'", python = ">=3.9,<3.13" },
    { version = ">=1.11,<3.0", optional = true, python = ">=3.9,<3.13" }
]
xarray = { version = ">=2023.1", optional = true }

[tool.poetry.extras]
all = ["jax", "jaxlib", "numpy", "packaging", "pandas", "polars", "pyarrow", "torch", "xarray"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "^2.1"
mkdocs-material = "^9.5"
mkdocstrings = { extras = ["python"], version = ">=0.26,<1.0" }

[tool.poetry.group.dev.dependencies]
black = ">=24.10"
coverage = { extras = ["toml"], version = "^7.6" }
docformatter = { extras = ["tomli"], version = "^1.7" }
feu = { extras = ["cli"], version = ">=0.3,<1.0" }
pre-commit = ">=4.0,<5.0"
pygments = "^2.18"
pytest = "^8.3"
pytest-cov = ">=6,<7"
pytest-timeout = "^2.3"
ruff = ">=0.7,<1.0"
xdoctest = "^1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["coola"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
testpaths = "tests/"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
addopts = "--color yes --durations 10 -rf"
# Configuration of the short test summary info
# https://docs.pytest.org/en/stable/usage.html#detailed-summary-report

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pylint.FORMAT]
max-line-length = 100

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 72
wrap-descriptions = 72
syntax = "google"

[tool.ruff]
# List of rules: https://docs.astral.sh/ruff/rules/
lint.select = [
    "A", # builtins
    "ANN", # annotations
    "ARG", # flake8-unused-arguments
    "B", # bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle (Error)
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FURB", # refurb
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # logging
    "N", # naming
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PTH", # pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle (Warning)
]
lint.ignore = [
    "A003", # Class attribute `{name}` is shadowing a python builtin
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed.
    "B905", # `zip()` without an explicit strict= parameter set. The `strict=` argument was added in Python 3.10
    "E501", # Line lengths are recommended to be no greater than 79 characters.
    "W505", # Doc line too long
    "PLR0913", # Too many arguments in function definition (8 > 5)
    "PLR2004", # Magic value used in comparison, consider replacing 0.0 with a constant variable

    # The following rules are ignored because they conflict with another library like docformatter.
    "D102", # Missing docstring in public method
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D205", # 1 blank line required between summary line and description
    "D209", # Multi-line docstring closing quotes should be on a separate line
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "A", # builtins
    "ANN", # annotations
    "ARG", # flake8-unused-arguments
    "B", # bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle (Error)
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FURB", # refurb
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # logging
    "N", # naming
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PTH", # pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle (Warning)
]
lint.unfixable = []

lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Enable on top of the Google convention.
lint.extend-select = ["D400", "D401", "D404"]

line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = [
    "D", # pydocstyle
    "PL", # Pylint
    "S101", # flake8-bandit
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["src"]

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.aliases]
numpy = "np"
pandas = "pd"
polars = "pl"
pyarrow = "pa"
xarray = "xr"
