[build-system]
requires = ["hatchling >= 1.27", "hatchling-autoextras-hook>=0.1.1"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.metadata.hooks.autoextras]

[project]
name = "coola"
version = "0.10.0"
description = "Library to check equality between two complex/nested objects"
readme = "README.md"
authors = [
    { name = "Thibaut Durand", email = "durand.tibo+gh@gmail.com" },
]
keywords = [
    "equality",
    "testing",
    "jax",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "pytorch",
    "xarray",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

dynamic = ["maintainers"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]

requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
jax = ["jax>=0.5.0,<1.0; (sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine == 'arm64'))"]
numpy = ["numpy>=1.24,<3.0"]
packaging = ["packaging>=22.0"]
pandas = ["pandas>=2.0,<3.0"]
polars = ["polars>=1.0,<2.0"]
pyarrow = ["pyarrow>=11.0,<23.0; python_version < '3.14'"]
torch = ["torch>=2.0,<3.0; (sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine == 'arm64'))"]
xarray = ["xarray>=2023.1"]

[dependency-groups]
dev = [
    "black >=25.12",
    "coverage[toml] >=7.11,<8.0",
    "docformatter[tomli] >=1.7,<2.0 ; python_version < '3.14'",
    "feu[all] >=0.5.0,<1.0",
    "invoke >=2.2.0,<3.0",
    "pre-commit >=4.4,<5.0",
    "pygments >=2.19,<3.0",
    "pyright >=1.1.407,<2.0",
    "pytest >=9.0,<10.0",
    "pytest-cov >=7.0,<8.0",
    "pytest-timeout >=2.4,<3.0",
    "ruff >=0.14,<1.0",
    "xdoctest >=1.3,<2.0",
]

docs = [
    "mike >=2.1,<3.0",
    "mkdocs-material >=9.7,<10.0",
    "mkdocstrings[python] >=1.0,<2.0",
    "mkdocs-include-markdown-plugin >=7.2,<8.0",
]

[project.urls]
Homepage = "https://github.com/durandtibo/coola"
Repository = "https://github.com/durandtibo/coola"
Documentation = "https://durandtibo.github.io/coola/"
Changelog = "https://github.com/durandtibo/coola/releases"
Issues = "https://github.com/durandtibo/coola/issues"

[tool.uv.pip]
torch-backend = "auto"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["coola"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.pytest]
minversion = "9.0"
pythonpath = ["src"]
testpaths = ["tests/"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
addopts = ["--color", "yes", "--durations", "10", "-rf"]
# Configuration of the short test summary info
# https://docs.pytest.org/en/stable/usage.html#detailed-summary-report

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.pylint.FORMAT]
max-line-length = 100

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 72
wrap-descriptions = 72
syntax = "google"

[tool.ruff]
# List of rules: https://docs.astral.sh/ruff/rules/
lint.select = [
    "A", # builtins
    "ANN", # annotations
    "ARG", # flake8-unused-arguments
    "B", # bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle (Error)
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FURB", # refurb
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # logging
    "N", # naming
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PTH", # pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle (Warning)
]
lint.ignore = [
    "A003", # Class attribute `{name}` is shadowing a python builtin
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed.
    "B905", # `zip()` without an explicit strict= parameter set. The `strict=` argument was added in Python 3.10
    "E501", # Line lengths are recommended to be no greater than 79 characters.
    "W505", # Doc line too long
    "PLR0913", # Too many arguments in function definition (8 > 5)
    "PLR2004", # Magic value used in comparison, consider replacing 0.0 with a constant variable

    # The following rules are ignored because they conflict with another library like docformatter.
    "D102", # Missing docstring in public method
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D205", # 1 blank line required between summary line and description
    "D209", # Multi-line docstring closing quotes should be on a separate line
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "A", # builtins
    "ANN", # annotations
    "ARG", # flake8-unused-arguments
    "B", # bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle (Error)
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FURB", # refurb
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # logging
    "N", # naming
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PTH", # pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle (Warning)
]
lint.unfixable = []

lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Enable on top of the Google convention.
lint.extend-select = ["D400", "D401", "D404"]

line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = [
    "D", # pydocstyle
    "PL", # Pylint
    "S101", # flake8-bandit
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["src"]

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.aliases]
numpy = "np"
pandas = "pd"
polars = "pl"
pyarrow = "pa"
xarray = "xr"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
